salesforce-main/src/main/default/objects/Country__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Country must be enabled for related lookup relationships to function</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>