salesforce-main/src/main/default/objects/Country__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>