salesforce-main/src/main/default/objects/Country__c/fields/Economic_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Economic_Grouping__c</fullName>
    <label>Economic Grouping</label>
    <length>30</length>
    <type>Text</type>
</CustomField>