salesforce-main/src/main/default/objects/Country__c/fields/ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code__c</fullName>
    <label>ISO Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>