salesforce-main/src/main/default/objects/Country__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <length>4</length>
    <type>Text</type>
</CustomField>